# genice-mdanalysis

./: .gitignore  Jupyter.ipynb  Makefile  README.md  ReadFromPickle.ipynb  pyproject.toml  replacer.py  setup.py  temp_README.md
genice2_mdanalysis/: __init__.py
genice2_mdanalysis/formats/: mdanalysis.py
