[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "genice2_mdanalysis/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["genice2_mdanalysis"]

[project]
dynamic = ["version"]
name = "genice2-mdanalysis"

[project.urls]
Homepage = "https://github.com/vitroid/genice-mdanalysis"

[tool.genice.urls]
repository = "https://github.com/vitroid/GenIce"
logo = "https://raw.githubusercontent.com/vitroid/GenIce/develop/logo/genice-v0.png"

# poetry self add poetry-version-plugin
[tool.poetry-version-plugin]
source = "init"

[tool.poetry]
name = "genice2-mdanalysis"
version = "0.0.0" # for GenIce2.2
description = "A GenIce format plugin to make a Universe of MDAnalysis."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
GenIce2 = "^2.2.5.2"
MDAnalysis = "*"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.3"
toml = "^0.10.2"
jupyter = "^1.0.0"

[tool.poetry.plugins.genice2_format]
mdanalysis = "genice2_mdanalysis.formats.mdanalysis"

